Bug 257986 - Account values are not correctly summarized in institution view
Summary: Account values are not correctly summarized in institution view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-26 16:18 UTC by Thomas Baumgart
Modified: 2010-11-27 11:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-11-26 16:18:40 UTC
Version:           unspecified (using KDE 1.2) 
OS:                Linux

Liability account balances are added to the total instead of subtracted in the institution view.

Reproducible: Didn't try

Steps to Reproduce:
Create an institution and assign it an asset and a liability account with an opening balance different from zero.

Actual Results:  
The institution view shows the sum of the accounts balances.

Expected Results:  
The institution view shows the difference of the accounts balances.
Comment 1 Cristian Oneț 2010-11-27 11:12:49 UTC
SVN commit 1201239 by conet:

BUG: 257986
Fix the bug plus as an extra feature to display the institution value with the negative color if it's value is negative.

 M  +6 -0      accountsmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201239
Comment 2 Cristian Oneț 2010-11-27 11:15:00 UTC
SVN commit 1201243 by conet:

BUG: 257986
Fix the bug plus as an extra feature to display the institution value with the negative color if it's value is negative.
Merged into the stable branch.

 M  +6 -0      accountsmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201243
Comment 3 Thomas Baumgart 2010-11-27 11:55:36 UTC
SVN commit 1201316 by tbaumgart:

Show entries in normal color (again) if their balance becomes positive while another account is added.

BUG: 257986

 M  +4 -0      accountsmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201316
Comment 4 Thomas Baumgart 2010-11-27 11:59:32 UTC
SVN commit 1201319 by tbaumgart:

Show entries in normal color (again) if their balance becomes positive while another account is added.

Backported to stable branch

BUG: 257986

 M  +3 -0      accountsmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201319