Show entries in normal color (again) if their balance becomes positive while another account is added.

BUG: 257986

svn path=/trunk/extragear/office/kmymoney/; revision=1201316