kmymoney/models/accountsmodel.cpp
@@ -28,6 +28,7 @@
 
 #include <KLocalizedString>
 #include <KIconLoader>
+#include <KColorScheme>
 #include <KDebug>
 
 // ----------------------------------------------------------------------------
@@ -363,7 +364,10 @@ public:
     QModelIndex newIndex = model->index(instIndex.row(), instIndex.column() + TotalValue, instIndex.parent());
     if (institutionValue.isNegative()) {
       model->setData(newIndex, KMyMoneyGlobalSettings::listNegativeValueColor(), Qt::ForegroundRole);
+    } else {
+      model->setData(newIndex, KColorScheme(QPalette::Active).foreground(KColorScheme::NormalText).color(), Qt::ForegroundRole);
     }
+
     model->setData(newIndex, institutionValue.formatMoney(m_file->baseCurrency()), Qt::DisplayRole);
     model->setData(newIndex, institutionValue.formatMoney(m_file->baseCurrency()), AccountTotalValueDisplayRole);
     model->setData(newIndex, font, Qt::FontRole);
